--- a/app/views/framework_views/parts/basic_input_text.scala.html
+++ b/app/views/framework_views/parts/basic_input_text.scala.html
@@ -15,13 +15,16 @@
  * You should have received a copy of the GNU General Public License along with
  * this program. If not, see <http://www.gnu.org/licenses/>.
  *@
-@(field: Field, fieldLabel: String, forceRequired: Boolean=false)
+@(field: Field, fieldLabel: String, fieldDescription: String, forceRequired: Boolean)
 @import commons._
 @import framework_views.parts
 <div class="form-group @if(field.hasErrors) {has-error}">
-    <label class="control-label" for="@field.id">@(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+    <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
     <input class="form-control" type="text" id="@field.id" name="@field.name" value="@field.value" data-primitive="true"/>
-    <span class="help-block"><strong>@{field.error.map { error => parts.Msg(error.message) }}</strong></span>
+    <span class="help-block">
+        @if(fieldDescription != null && !fieldDescription.equals("")){@parts.Msg(fieldDescription) <br/>}
+        <strong>@{field.error.map { error => parts.Msg(error.message) }}</strong>
+    </span>
 </div>
 @***********************************************************
  * A template which encapsulate the default inputText helper
