--- a/app/views/framework_views/parts/dateinput.scala.html
+++ b/app/views/framework_views/parts/dateinput.scala.html
@@ -15,14 +15,14 @@
  * You should have received a copy of the GNU General Public License along with
  * this program. If not, see <http://www.gnu.org/licenses/>.
  *@
-@(field: Field, fieldLabel: String, pattern: String=null, forceRequired: Boolean=false)
+@(field: Field, fieldLabel: String, fieldDescription: String=null, pattern: String=null, forceRequired: Boolean=false)
 @import framework_views.parts.commons._
 @import framework_views.parts.Msg
 @import framework_views.parts
 
 <div class="form-group @if(field.hasErrors) {has-error}">
     @if(fieldLabel != null && !fieldLabel.equals("")) {
-       <label class="control-label" for="@field.id">@(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+       <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
     }
     <div class="input-group">
         <input class="form-control" type="text" id="@field.id" name="@field.name" readonly="readonly" value="@field.value" placeholder="@Msg("form.input.date.placeholder")"/>
@@ -31,8 +31,11 @@
         </span>
     </div>
 
-    @if(field.hasErrors) {
-        <span class="help-block"><strong>@{field.error.map { error => parts.Msg(error.message) }}</strong></span>
+    @if(field.hasErrors || (fieldDescription != null && !fieldDescription.equals(""))) {
+        <span class="help-block">
+            @if(fieldDescription != null && !fieldDescription.equals("")){@parts.Msg(fieldDescription) <br/>}
+            <strong>@{field.error.map { error => parts.Msg(error.message) }}</strong>
+        </span>
     }
     <script type="text/javascript">
     $("#empty-@(field.id)-field").click(function(event) {
