--- a/app/views/framework_views/parts/checkboxlist.scala.html
+++ b/app/views/framework_views/parts/checkboxlist.scala.html
@@ -15,7 +15,7 @@
  * You should have received a copy of the GNU General Public License along with
  * this program. If not, see <http://www.gnu.org/licenses/>.
  *@
-@(field: Field, fieldLabel: String, selectableValues: framework.utils.ISelectableValueHolderCollection[_], isDescriptionVisible: Boolean=true, isDynamicField: Boolean=false, forceRequired: Boolean=false)
+@(field: Field, fieldLabel: String, fieldDescription: String, selectableValues: framework.utils.ISelectableValueHolderCollection[_], isDescriptionVisible: Boolean=true, isDynamicField: Boolean=false, forceRequired: Boolean=false)
 
 @import commons._
 @import framework_views.parts
@@ -45,9 +45,12 @@
 }
 
 <div class="form-group @if(field.hasErrors) {has-error}">
-    @if(!fieldLabel.equals("")) {
-        <label class="control-label">@fieldLabel@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
-        <span class="help-block"><strong>@{field.error.map { error => parts.Msg(error.message) }}</strong></span>
+    @if(fieldLabel != null && !fieldLabel.equals("")) {
+        <label class="control-label">@parts.Msg(fieldLabel)@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+        <span class="help-block">
+            @if(fieldDescription != null && !fieldDescription.equals("")){@parts.Msg(fieldDescription) <br/>}
+            <strong>@{field.error.map { error => parts.Msg(error.message) }}</strong>
+        </span>
     }
     @for((item, index) <- selectableValues.getSortedValues().zipWithIndex) {
         <div class="checkbox">
