--- a/app/views/framework_views/parts/fileupload_field.scala.html
+++ b/app/views/framework_views/parts/fileupload_field.scala.html
@@ -15,10 +15,11 @@
  * You should have received a copy of the GNU General Public License along with
  * this program. If not, see <http://www.gnu.org/licenses/>.
  *@
-@(field: Field, fieldLabel: String, objectType: Class[_]=null, objectId: Long=null)
+@(field: Field, fieldLabel: String, fieldDescription: String, objectType: Class[_]=null, objectId: Long=null)
 
 @import commons._
 @import framework.utils.FileAttachmentHelper
+@import framework_views.parts
 
 @fileAttachments=@{
     if(objectType!=null && objectId!=null){
@@ -28,7 +29,7 @@
     }
 }
 <div class="form-group @if(field.hasErrors) {has-error}">
-    <label class="control-label" for="@field.id">@(fieldLabel)@if(isRequired(field)){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
+    <label class="control-label" for="@field.id">@parts.Msg(fieldLabel)@if(isRequired(field)){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i>}</label>
     @if(fileAttachments!=null && fileAttachments.size()!=0){
         <ul>
         @for(fileAttachment <- fileAttachments){
@@ -46,7 +47,11 @@
     <input type="hidden" id="@(FileAttachmentHelper.FILE_ATTRIBUTE_PREFIX)@(field.id)_name" name="@(FileAttachmentHelper.getFileNameInputName(field.name))" value=""/>
     
     <input type="file" id="@(FileAttachmentHelper.FILE_ATTRIBUTE_PREFIX)@(field.id)_@(FileAttachmentHelper.FileType.UPLOAD.name)" name="@(FileAttachmentHelper.getFileInputName(field.name, FileAttachmentHelper.FileType.UPLOAD))"/>
-    <span class="help-block"><strong>@{field.error.map { error => Messages(error.message) }}</strong></span>
+    
+    <span class="help-block">
+        @if(fieldDescription != null && !fieldDescription.equals("")){@parts.Msg(fieldDescription) <br/>}
+        <strong>@{field.error.map { error => Messages(error.message) }}</strong>
+    </span>
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
