--- a/app/views/framework_views/parts/multi_languages_input_text.scala.html
+++ b/app/views/framework_views/parts/multi_languages_input_text.scala.html
@@ -39,10 +39,10 @@
     <label class="control-label" for="@field.id">
         @(fieldLabel) @if(required){&nbsp;<i style="color: red;" class="glyphicons glyphicons-asterisk"></i> <small><span style="color: red;">@parts.Msg("form.input.multi_languages_string.required")</span></small>}</label>
 
-        @helper.repeat(field("values"), min = framework.services.ServiceStaticAccessor.getMessagesPlugin().getValidLanguageList().size) { vField =>
+        @helper.repeat(field("values"), min = _messagesPluginService.getValidLanguageList().size) { vField =>
 
             <div class="input-group">
-                <div class="input-group-addon">@framework.services.ServiceStaticAccessor.getMessagesPlugin().getValidLanguageList().get(count).getCode.toUpperCase</div>
+                <div class="input-group-addon">@_messagesPluginService.getValidLanguageList().get(count).getCode.toUpperCase</div>
                 <input class="form-control" type="text" id="@vField.id" name="@vField.name" value="@vField.value"/>
             </div>
             
