Replace glyphicons by font awesome (refs #TAF-264)

--- a/app/views/framework_views/parts/framework_font_awesome_includes.scala.html
+++ b/app/views/framework_views/parts/framework_font_awesome_includes.scala.html
@@ -16,13 +16,4 @@
  * this program. If not, see <http://www.gnu.org/licenses/>.
  *@
 @(assetsRootLocation: String)
-@framework_bootstrap_css_includes(assetsRootLocation)
-@framework_font_awesome_includes(assetsRootLocation)
-@framework_jquery_includes(assetsRootLocation)
-@framework_bootstrap_js_includes(assetsRootLocation)
-@framework_thirdparty_libs_includes(assetsRootLocation)
-@framework_fonts_includes(assetsRootLocation)
-@framework_main_includes(assetsRootLocation)
-@framework_iecompatibility_libs_includes(assetsRootLocation)
-
-
+<link href="@(assetsRootLocation)framework/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
